updated group photos, and added social media links to footer

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -15,10 +15,10 @@
     link: /donate/
 - links:
   - name: Facebook
-    link: https://facebook.com
+    link: https://www.facebook.com/beam.teach/
     new_window: false
     social_icon: Facebook
   - name: Instagram
-    link: https://instagram.com
+    link: https://www.instagram.com/beam_berkeley/
     social_icon: Instagram
     new_window: false
