added scrolldown arrow prompt

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,6 @@
   link: /
   new_window: false
   highlight: false 
-- name: News
-  link: /news/
-  new_window: false
-  highlight: false
 - name: About
   link: /about/
   new_window: false
@@ -14,15 +10,19 @@
   link: /lessons/
   new_window: false
   highlight: false
-- name: Contact
-  link: /contact/
-  new_window: false
-  highlight: false
-- name: Donate
-  link: /donate/
+- name: News
+  link: /news/
   new_window: false
   highlight: false
 - name: Events
   link: /calendar/
   new_window: false
   highlight: false 
+- name: Contact
+  link: /contact/
+  new_window: false
+  highlight: false
+- name: Donate  
+  link: https://asuc.org/donate/
+  new_window: false
+  highlight: false
