--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -12,7 +12,7 @@
   - name: Contact
     link: /contact/
   - name: Donate
-    link: /donate/
+    link: https://asuc.org/donate/
 - links:
   - name: Facebook
     link: https://www.facebook.com/beam.teach/
