--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -25,8 +25,8 @@
   new_window: false
   highlight: false
 - name: Donate
-  link: https://asuc.org/donate/
-  new_window: true
+  link: /donate/
+  new_window: false
 
   highlight: false
 - name: Events
