removed news page, fixed button fonts, removed extra lessons

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,8 +1,8 @@
 - links:
   - name: Home
     link: /
-  - name: News
-    link: /news/
+  - name: Join
+    link: /join/
 - links:
   - name: About
     link: /about/
