website changes #1, #2, #4, #5, as well as some formatting for lessons page

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,18 +1,22 @@
 - links:
   - name: Home
     link: /
-  - name: Join
-    link: /join/
-- links:
   - name: About
     link: /about/
+- links:
   - name: Lessons
     link: /lessons/
+  - name: Events
+    link: /calendar/
 - links:
-  - name: Contact
-    link: /contact/
   - name: Donate
     link: /donate/
+  - name: Contact
+    link: /contact/
+- links:
+  - name: Join
+    link: /join/
+
 - links:
   - name: Facebook
     link: https://www.facebook.com/beam.teach/
