--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -29,9 +29,8 @@
   new_window: false
   highlight: false
 
-#- name: FAQ
- 
-  #link: /faq/
-  #new_window: false
-  #highlight: false
+- name: FAQ
+  link: /faq/
+  new_window: false
+  highlight: false
  
